--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
   font-family: "Roboto", sans-serif;
-  font-family: "Raleway", sans-serif;
-  font-family: "Merienda", cursive;
+  /*font-family: "Raleway", sans-serif;
+  font-family: "Merienda", cursive;*/
   line-height: 1.5;
   font-weight: 400;
 }
