--- a/src/App.css
+++ b/src/App.css
@@ -136,3 +136,20 @@ input {
   background: var(--white);
   border: none;
 }
+
+.formButton {
+  border-radius: 24px;
+  padding: 10px;
+  width: 120px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  font-family: var(--bodyFont);
+  font-size: var(--bodyTextSize);
+  font-weight: var(--fontWeightBold);
+  color: var(--white);
+  background-color: var(--forestGreen);
+  box-shadow: var(--boxShadow);
+  text-align: center;
+  border: none;
+}
