--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -9,7 +9,8 @@
 }
 
 /*modal code*/
-.addChildModal {
+.addChildModal,
+.addItemModal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -39,4 +40,39 @@
   display: flex;
   justify-content: end;
   color: var(--black);
+}
+
+/*wardrobe code*/
+
+.wardrobeInputFilters {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+
+.wardrobeSearchBar {
+  width: 64%;
+}
+
+.wardrobeAgeDropdown {
+  width: 38%;
+}
+
+.wardrobeSortOptions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+
+.wardrobeSortOption {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wardrobeSortImage {
+  height: 53px;
+  width: 53px;
 }
