--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ form {
   max-width: 360px;
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 24px;
   align-items: space-between;
   font-family: var(--bodyFont);
   font-size: var(--bodyTextSize);
@@ -131,12 +131,14 @@ form {
 
 input {
   margin-left: 1em;
-  width: 50%;
+  width: 68%;
   max-width: 350px;
   padding: 1em;
   box-sizing: border-box;
   background: var(--white);
   border: none;
+  font-family: var(--bodyFont);
+  font-size: var(--bodyTextSize);
 }
 
 .formButton {
