--- a/src/components/dropdowns/Dropdown.css
+++ b/src/components/dropdowns/Dropdown.css
@@ -16,7 +16,6 @@
 }
 
 .categoryDropdown {
-  width: 100%;
   height: 40px;
   border-radius: 5px;
   border: 1px solid var(--blue100);
@@ -30,4 +29,11 @@
   }
   margin-left: 8px;
   margin-right: 0;
+  flex: 1;
+}
+
+.dropDownWithLabel {
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
