--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -76,3 +76,15 @@
   height: 53px;
   width: 53px;
 }
+
+.itemOverviewButtons {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 24px;
+  gap: 8px;
+}
+
+.itemOverviewButton {
+  flex: 1;
+}
