Donate, Sell, Recycle options (updating in FB)

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -97,3 +97,10 @@
   font-size: var(--bodyTextSize);
   font-weight: var(--fontWeightBold);
 }
+
+.itemOverviewImage {
+  width: calc(100% - 4px);
+  max-width: 209px;
+  height: 221px;
+  object-fit: cover;
+}
