--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -104,3 +104,19 @@
   height: 221px;
   object-fit: cover;
 }
+
+.selectCheckmark {
+  width: 24px;
+  height: 24px;
+  padding: 8px;
+  background-color: var(--blue100);
+  border-radius: 8px;
+}
+
+.selectCheckmark.selected {
+  width: 24px;
+  height: 24px;
+  padding: 8px;
+  background-color: var(--forestGreen);
+  border-radius: 8px;
+}
