info pop up structure

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -10,7 +10,8 @@
 
 /*modal code*/
 .addChildModal,
-.addItemModal {
+.addItemModal,
+.infoModal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
