--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ html {
   padding-left: 16px;
   padding-right: 16px;
   margin-bottom: 5rem;
+  width: 100%;
 }
 
 /* Remove underline from hyperlinks */
