--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -43,6 +43,73 @@
   color: var(--black);
 }
 
+/*Child Overview code */
+
+.childOverviewSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  gap: 16px;
+  overflow: hidden;
+}
+
+.childOverviewArticleContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-shadow: var(--boxShadow);
+  border-radius: 8px;
+  width: 100%;
+}
+
+.childOverviewArticleImageContainer {
+  width: 100%;
+  max-width: 100px;
+  height: 167px;
+  margin-left: 25px;
+  display: flex;
+  align-items: center;
+  margin-right: 25px;
+}
+
+.childOverviewArticleImageWardrobe {
+  width: 100%;
+  height: 167px;
+  width: 100px;
+}
+
+.childOverviewArticleImageEdit {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
+
+.childOverviewArticleHeading {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 185px;
+  margin-right: 25px;
+}
+
+.childOverviewArticleContainerWardrobe {
+  height: 217px;
+}
+.childOverviewArticleContainerDeclutter {
+  height: 174px;
+}
+
+.childOverviewArticleContainerEdit {
+  height: 174px;
+}
+
+.childOverviewArticleImageEditIcon {
+  position: absolute;
+  margin-left: 75px;
+  margin-top: 75px;
+}
+
 /*wardrobe code*/
 
 .wardrobeInputFilters {
