--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -61,7 +61,8 @@
   align-items: center;
   box-shadow: var(--boxShadow);
   border-radius: 8px;
-  width: 100%;
+  width: calc(100% - 6px);
+  justify-items: flex-start;
 }
 
 .childOverviewArticleImageContainer {
@@ -102,6 +103,7 @@
 
 .childOverviewArticleContainerEdit {
   height: 174px;
+  margin-bottom: 6px;
 }
 
 .childOverviewArticleImageEditIcon {
