--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,6 +8,12 @@
   right: 24px;
 }
 
+.childCardsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 /*modal code*/
 .addChildModal,
 .addItemModal,
