--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -49,6 +49,36 @@
   color: var(--black);
 }
 
+/*Home child added code*/
+
+.successPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 190px;
+  margin-bottom: 24px;
+  gap: 16px;
+}
+
+.successPageContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  margin-top: 64px;
+}
+
+.successPageButtons {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.successPageButton {
+  width: 220px !important;
+}
+
 /*Child Overview code */
 
 .childOverviewSection {
