--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -184,12 +184,11 @@
 }
 
 .wardrobeItemsContainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 8px;
+
   margin-top: 24px;
-  justify-content: center;
 }
 
 .itemOverviewButtons {
