--- a/src/components/itemCard/itemCard.css
+++ b/src/components/itemCard/itemCard.css
@@ -6,7 +6,8 @@
 }
 
 .itemCardImage {
-  width: 100%;
-  height: 100%;
+  max-width: 177px;
+  height: 187px;
+  object-fit: cover;
   border-radius: 8px;
 }
