--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -192,6 +192,77 @@
 }
 
 /*item overview code*/
+.itemOverviewHeading {
+  margin-bottom: 40px;
+}
+
+.itemOverviewContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  margin-top: 24px;
+}
+
+.itemOverviewImageContainer {
+  width: calc(100% - 4px);
+  max-width: 209px;
+  height: 221px;
+  object-fit: cover;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.itemOverviewImage {
+  width: calc(100% - 4px);
+  max-width: 209px;
+  height: 221px;
+  object-fit: cover;
+  border-radius: 8px 0px 0px 8px;
+}
+
+.itemOptionButton {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 14.5px;
+  border-radius: 0px 8px 8px 0px;
+  border: none;
+  background-color: var(--blue100);
+  padding: 12px 4px;
+  color: var(--forestGreen);
+  width: 50px;
+  height: 64px;
+  font-size: var(--bodyTextSmallSize);
+}
+
+.infoContainer {
+  position: absolute;
+  top: 181px;
+  right: 16px;
+}
+
+.itemOverviewDetails {
+  display: flex;
+  flex-direction: column;
+  margin-top: 32px;
+  margin-bottom: 40px;
+  gap: 32px;
+}
+
+.itemOverviewInfoContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.itemOverviewInfoHeading {
+  font-weight: var(--fontWeightBold);
+  width: 88px;
+}
 
 .itemOverviewButtons {
   display: flex;
@@ -212,13 +283,6 @@
   font-family: var(--bodyFont);
   font-size: var(--bodyTextSize);
   font-weight: var(--fontWeightBold);
-}
-
-.itemOverviewImage {
-  width: calc(100% - 4px);
-  max-width: 209px;
-  height: 221px;
-  object-fit: cover;
 }
 
 .selectCheckmark {
