--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -55,9 +55,14 @@
   align-items: center;
 }
 
+.profileOrder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
 .userProfileChildren {
-  position: aboslute;
-  top: 430px;
   width: calc(100% - 32px);
 }
 
