--- a/src/pages/blog/blog.css
+++ b/src/pages/blog/blog.css
@@ -12,3 +12,11 @@
 .blogSearchBar {
   width: 100%;
 }
+
+.blogArticleCardsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  margin-top: 16px;
+}
