empty state for no kids added

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -241,6 +241,14 @@
   font-size: var(--bodyTextSmallSize);
 }
 
+.selected {
+  fill: var(--white);
+}
+
+.notSelected {
+  fill: var(--forestGreen);
+}
+
 .itemOptionButton.selected {
   background-color: var(--forestGreen);
   color: var(--white);
