wardrobe no items

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -192,6 +192,10 @@
   margin-top: 24px;
 }
 
+.wardrobeNoItems {
+  width: 200%;
+}
+
 /*item overview code*/
 .itemOverviewHeading {
   margin-bottom: 40px;
