edit item heading

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -303,6 +303,10 @@
   font-weight: var(--fontWeightBold);
 }
 
+.editItemArrowBack {
+  margin-top: 24px;
+}
+
 /*information modal code*/
 
 .infoHeading {
