--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -20,20 +20,22 @@
 
 .userProfileImageContainer {
   position: relative;
-  width: 134px;
+  width: 120px;
+  height: 120px;
   margin-top: -65px;
 }
 
 .userProfileImage {
   width: 100%;
   border-radius: 50%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .profileEditIcon {
   position: absolute;
   bottom: 0;
   right: 0;
-  padding: 5px;
 }
 
 .userProfileName {
