list card stuff

--- a/src/pages/wishlist/wishlist.css
+++ b/src/pages/wishlist/wishlist.css
@@ -70,3 +70,10 @@
 .createlistButton {
   width: calc(100% - 16px);
 }
+
+.listCardsContainer {
+  margin-top: 64px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
