colour change, options -couldn't change svg colour

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -255,8 +255,8 @@
 }
 
 .itemOptionButton.selected {
-  background-color: var(--forestGreen);
-  color: var(--white);
+  background-color: var(--grassGreen);
+  color: var(--forestGreen);
 }
 
 .infoContainer {
