--- a/src/pages/Error404/error404.css
+++ b/src/pages/Error404/error404.css
@@ -9,10 +9,13 @@
   margin-top: 220px;
   margin-bottom: 64px;
   height: 200px;
+  width: 182px;
 }
 
 .errorImage {
   height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .errorButton {
