--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,6 +7,8 @@
   bottom: 88px;
   right: 24px;
   position: fixed;
+  height: 45px;
+  width: 45px;
 }
 
 .childCardsContainer {
@@ -113,9 +115,14 @@
 }
 
 .childOverviewArticleImageWardrobe {
-  width: 100%;
   height: 167px;
   width: 100px;
+}
+
+.reuseImage {
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
 }
 
 .childOverviewArticleImageEdit {
