--- a/src/pages/wishlist/wishlist.css
+++ b/src/pages/wishlist/wishlist.css
@@ -15,7 +15,9 @@
 }
 
 .listBearImage {
-  height: 100%;
+  height: 166px;
+  width: 132px;
+  object-fit: cover;
 }
 
 .wishlistSubheading {
@@ -49,6 +51,7 @@
 
 .wishlistHanger {
   height: 57px;
+  width: 90px;
   margin-bottom: 32px;
 }
 
@@ -99,6 +102,7 @@
 
 .wishlistHangerImage {
   height: 94px;
+  width: 148px;
 }
 
 .hangerImageContainer {
